[package]
name = "bevy_state_ui"
version = "0.2.0"
edition = "2021"
description = "A simple UI library for rendering a UI from a given state"
repository = "https://github.com/ironpeak/bevy_state_ui"
authors = ["Hrafn Orri Hrafnkelsson <hrafn@vidfjord.is>"]
license = "MIT"
readme = "README.md"
keywords = ["gamedev", "ui", "bevy"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = ["bevy_ui"] }

[dev-dependencies]
bevy_screen_diagnostics = "0.6"
bevy = { version = "0.14", default-features = false, features = [
    "bevy_text",
    "default_font",
    "bevy_winit",
    "x11",
] }

[[example]]
name = "simple"
