[package]
name = "bevy_state_ui"
version = "0.5.1"
edition = "2021"
description = "A simple UI library for rendering a UI from a given state"
repository = "https://github.com/ironpeak/bevy_state_ui"
authors = ["Hrafn Orri Hrafnkelsson <hrafn@vidfjord.is>"]
license = "MIT"
readme = "README.md"
keywords = ["gamedev", "ui", "bevy"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_ui"] }

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_log",
    "bevy_text",
    "default_font",
    "bevy_winit",
    "bevy_window",
    "x11",
] }

[[example]]
name = "simple"
